welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:135: error: Unmatched closing brace '}' ignored here
}
^